global styles updates

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -2,7 +2,7 @@
     <div class="about-copy">
         <h2>About the Comics</h2>
         <p>
-            <a href="https://notcomfy.com">notcomfy</a> is an attempt to create visual aides for some of my wackier ideas.
+            <a href="https://notcomfy.com"><span class="main-link-area">notcomfy</span></a> is an attempt to create visual aides for some of my wackier ideas.
             Some of the comics are meant to be funny. Others are meant to make you wince. Some are meant to show a fun new way to look at something mundane
             about the world. Either way, I hope that you find something worthwhile in these comics :)
         </p>
@@ -16,7 +16,7 @@
         <p>
             My name is Ali, and I've been making art for as long as I can remember. Growing up with the internet at my fingertips means
             webcomics have been something I've loved for years—only recently have I gotten into making my own. By day I'm a software developer in
-            Cleveland, Ohio. Given the more technical nature of my work, <a href="https://notcomfy.com">notcomfy</a> has been an opportunity to 
+            Cleveland, Ohio. Given the more technical nature of my work, <a href="https://notcomfy.com"><span class="main-link-area">notcomfy</span></a> has been an opportunity to 
             keep myself involved in art, which is something very important to me.
         </p>
     </div>
