--- a/src/colors.scss
+++ b/src/colors.scss
@@ -2,4 +2,5 @@ $bg-color: #f1f0e8;
 $text-color: #6e6868;
 $link-color: #6151a1;
 $link-hover: #9a87e6;
+$text-alert: #9c3f3f;
 $link-disabled: #55535a;
