--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,7 +18,9 @@ a, a:visited {
     color: $link-color;
     text-decoration: none;
     &:hover {
-        text-decoration: underline;
+        .main-link-area {
+            text-decoration: underline;
+        }
         color: $link-hover;
     }
 }
