--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,9 @@
       <a class="main-title" routerLink="/"><h1>notcomfy</h1></a>
       <nav class="navigation-container">
         <ul>
-          <li><a [routerLink]="['comics']" routerLinkActive="active">comics</a></li>
-          <li><a [routerLink]="['about']" routerLinkActive="active">about</a></li>
-          <li><a [routerLink]="['contact']" routerLinkActive="active">contact</a></li>
+          <li><a [routerLink]="['comics']" routerLinkActive="active"><span class="main-link-area">comics</span></a></li>
+          <li><a [routerLink]="['about']" routerLinkActive="active"><span class="main-link-area">about</span></a></li>
+          <li><a [routerLink]="['contact']" routerLinkActive="active"><span class="main-link-area">contact</span></a></li>
         </ul>
       </nav>
     </header>
