remove log statements

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,9 @@
       <li><a target="_blank" aria-label="Instagram" href="https://instagram.com/notcomfycomics"><i class="fa-brands fa-instagram"></i></a></li>
       <li><a target="_blank" aria-label="Tumblr" href="https://tumblr.com/notcomfycomics"><i class="fa-brands fa-square-tumblr"></i></a></li>
     </ul>
-    <p>&copy;notcomfy 2022. All rights reserved.</p>
+    <p>
+      &copy;notcomfy 2022. All rights reserved. 
+      <a routerLink="['/', 'privacy']"><span class="main-link-area">Privacy Policy</span></a>
+    </p>
   </footer>
 </div>
