get alt text from api

--- a/src/app/components/comics/comics.component.html
+++ b/src/app/components/comics/comics.component.html
@@ -1,6 +1,6 @@
 <div class="image-container">
     <div *ngIf="imageToShow && !imageLoading">
-        <img [src]="imageToShow" />
+        <img [src]="imageToShow" [alt]="currentIssue.alt ? currentIssue.alt.text : ''" />
     </div>
 </div>
 <div class="gallery-navigator">
