--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <div class="top-content">
     <header>
-      <a class="main-title" routerLink="/"><h1>notcomfy</h1></a>
+      <a class="main-title" routerLink="/"><h1 class="notcomfy-title">notcomfy</h1></a>
       <nav class="navigation-container">
         <ul>
           <li><a [routerLink]="['comics']" routerLinkActive="active"><span class="main-link-area">comics</span></a></li>
@@ -22,7 +22,7 @@
     </ul>
     <p>
       &copy;notcomfy 2022. All rights reserved. 
-      <a routerLink="['/', 'privacy']"><span class="main-link-area">Privacy Policy</span></a>
+      <a [routerLink]="['/', 'privacy']"><span class="main-link-area">Privacy Policy</span></a>
     </p>
   </footer>
 </div>
