--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,9 +17,20 @@
         }
     }
 }
-
+.notcomfy-title {
+    width: fit-content;   
+    text-align: center; 
+}
+.main-title {
+    width: fit-content;
+    text-align: center;
+}
 header {
     text-align: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     h1 {
         margin: 0;
     }
